--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,6 +1,118 @@
-
-* {
+/* Basic styles */
+body {
   margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.nav--title {
+  display: flex;
+  justify-content: start;
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
+.nav--title h1 {
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: #333;
+}
+
+.nav--logo {
+  background-color: rgb(2, 124, 29);
+  border-radius: 100%;
+  margin: 0.5em;
+  width: 40px;
+}
+
+/* Burger icon styles */
+#burger-toggle {
+  display: none;
+}
+
+#burger {
+  display: block;
+  cursor: pointer;
+  padding: 1em;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 9999;
+}
+
+#burger span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #333;
+  margin: 5px 0;
+  transition: transform 0.5s ease-in-out;
+}
+
+/* Navbar--menu styles */
+#navbar--menu {
+  padding-top: 5em;
+  position: fixed;
+  top: 0;
+  right: -50%;
+  width: 40%;
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.925);
+  transition: right 0.5s ease-in-out;
+  z-index: 999;
+  border: 1px solid rgb(255, 0, 0); /* For demo only */
+}
+
+
+
+#navbar--menu ul {
+  list-style: none;
   padding: 0;
-  box-sizing: border-box;
+  margin: 50px 0 0 50px;
+}
+
+#navbar--menu ul li {
+  margin-bottom: 1.2em;
+}
+
+#navbar--menu ul li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 1.1rem;
+}
+
+#navbar--menu a:hover{
+    font-weight: bolder;
+}
+
+/* Show navbar--menu when checkbox is checked */
+#burger-toggle:checked ~ #navbar--menu {
+  right: 0;
+}
+
+/* Rotate burger icon */
+#burger span:nth-child(1) {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+#burger span:nth-child(2) {
+  transition: transform 0.2s ease-in-out;
+}
+
+#burger span:nth-child(3) {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+
+/* Transform burger lines into a cross when checkbox is checked */
+#burger-toggle:checked + #burger span:nth-child(1) {
+  transform: rotate(45deg);
+}
+
+#burger-toggle:checked + #burger span:nth-child(2) {
+  transform: scaleY(0);
+}
+
+#burger-toggle:checked + #burger span:nth-child(3) {
+  transform: rotate(-45deg);
 }
